# bedevere

./: .gitignore  .pylintrc  __init__.py  discrete_sums.py  dnd.py  exceptions.py  markov.py  matrix.py  pyproject.toml  requirements.txt  setup.cfg
config/: config.md  config.yaml
config/arithmetic/: high.yaml
config/logging/: developer.yaml
src/bedevere/: __init__.py  constants.py  convolution.py  data.py  discrete_sums.py  distribution.py  dnd.py  matrix.py
src/bedevere/math/: __init__.py  convolution.py  data.py  distribution.py  markov.py
tests/: test_distribution.py
