[metadata]
name = bedevere
description = a package with math boilerplate and such
author = noahgill409@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3.10

[options]
packages =
    bedevere
python_requires = >= 3.10
package_dir =
    =src
zip_safe = no

[options.package_data]
bedevere = py.typed
